src/objects/CventEvents__EnvironmentSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the SF Environment configuration.</description>
    <fields>
        <fullName>CventEvents__DebugMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, will show more information in error messages, which would normally be hidden from the user.</description>
        <inlineHelpText>When checked, will show more information in error messages, which would normally be hidden from the user.</inlineHelpText>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsAccountTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Cvent logic for Account Trigger is disabled.</description>
        <inlineHelpText>When checked, Cvent logic for Account Trigger is disabled.</inlineHelpText>
        <label>Disable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsCampaignTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Cvent logic for Campaign Trigger is disabled.</description>
        <inlineHelpText>When checked, Cvent logic for Campaign Trigger is disabled.</inlineHelpText>
        <label>Disable Campaign Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsContactTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Cvent logic for Contact Trigger is disabled.</description>
        <inlineHelpText>When checked, Cvent logic for Contact Trigger is disabled.</inlineHelpText>
        <label>Disable Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsLeadTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Cvent logic for Lead Trigger is disabled.</description>
        <inlineHelpText>When checked, Cvent logic for Lead Trigger is disabled.</inlineHelpText>
        <label>Disable Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__NowOverride__c</fullName>
        <description>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</description>
        <inlineHelpText>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</inlineHelpText>
        <label>Now Override</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__TodayOverride__c</fullName>
        <description>Overrides the &quot;today&quot; date used by all Aquiva apex code. This includes the date portion of the &quot;now&quot; time.</description>
        <inlineHelpText>Overrides the &quot;today&quot; date used by all Aquiva apex code. This includes the date portion of the &quot;now&quot; time.</inlineHelpText>
        <label>Today Override</label>
        <type>Date</type>
    </fields>
    <label>Environment Settings</label>
</CustomObject>